fix: contact alignment

--- a/app/[locale]/globals.scss
+++ b/app/[locale]/globals.scss
@@ -70,7 +70,7 @@ h2 {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: $breaking-point-md) {
   body {
     background: #111111;
   }
